added ideas secion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
     <title>Typeless</title>
 </head>
 <body>
-    
+    <section id="ideas">
+        <div class=" container-xl">
+            <h1  class=" m-5">Turn your ideas into <br> reality.</h1>
+            <div class="form-row">
+                <div class="col m-5">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RnnAfGdPARM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col m-4">
+                    <h4>Choose your website template</h4>
+                    <p>Select from any of our industry-leading website templates, designer fonts, and color palettes to best fit your personal style and professional needs.</p>
+                    <h4>Add the tools you need</h4>
+                    <p>Explore which tools you want to add—whether it’s setting up an online store, booking services, or adding your favorite third-party extensions.</p>
+                    <h4>Reach your audience</h4>
+                    <p>Stand out in every inbox and social feed. On-brand email campaigns and social tools make it easy to grow your audience across multiple channels.</p>
+                    <a href="" class="first-start">GET STARTED--></a>
+                </div>
+              </div>
+        </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
